--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,7 +8,7 @@ import {
 ---
 
 <nav
-  class='h-12 w-full px-4 fixed top-0 left-0 grid-cols-[10%_80%] backdrop-blur-3xl border-b-[1px] border-transparent border-solid border-b-gray-300 dark:border-b-[#212121] md:!grid hidden z-50'
+  class='h-12 w-full px-4 fixed top-0 left-0 grid-cols-[10%_80%] backdrop-blur-[100px] border-b-[1px] border-transparent border-solid border-b-gray-300 dark:border-b-[#212121] md:!grid hidden z-50'
 >
   <img
     src='./favicon.webp'
