--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,15 +1,20 @@
 ---
-import "../css/Welcome.css";
-import { IconReact, IconTailwind, IconTypescript } from "./icons/technologies";
+import '../css/Welcome.css';
+import {
+  IconCSS,
+  IconReact,
+  IconTailwind,
+  IconTypescript,
+} from './icons/technologies';
 ---
 
 <script>
-  window.addEventListener("DOMContentLoaded", function () {
-    const img: HTMLElement = document.querySelector(".welcomeUserImg");
+  window.addEventListener('DOMContentLoaded', function () {
+    const img: HTMLElement = document.querySelector('.welcomeUserImg');
     const height = img.clientHeight;
     const width = img.clientWidth;
 
-    img.addEventListener("mousemove", function (e) {
+    img.addEventListener('mousemove', function (e) {
       const { layerX, layerY } = e;
       const yRotation = ((layerX - width / 2) / width) * 46;
       const xRotation = ((layerY - height / 2) / height) * 46;
@@ -22,7 +27,7 @@ import { IconReact, IconTailwind, IconTypescript } from "./icons/technologies";
       img.style.transform = string;
     });
 
-    img.addEventListener("mouseout", function () {
+    img.addEventListener('mouseout', function () {
       img.style.transform = `
 		perspective(500px)
 		scale(1)
@@ -33,46 +38,52 @@ import { IconReact, IconTailwind, IconTypescript } from "./icons/technologies";
 </script>
 
 <main
-  class="h-screen flex justify-center items-center bg-[radial-gradient(#00000010_3%,transparent_0)] bg-[length:7rem_7rem] dark:bg-[radial-gradient(#ffffff1a_3%,transparent_0)]"
+  class='h-screen flex justify-center items-center bg-[radial-gradient(#00000010_3%,#fff_0)] bg-[length:4rem_4rem] dark:bg-[radial-gradient(#ffffff1a_3%,transparent_0)]'
 >
-  <article class="w-[35rem] flex flex-col gap-2 justify-center items-center">
+  <article class='w-[35rem] flex flex-col gap-2 justify-center items-center'>
     <div
       class={`h-[182px] w-[182px] bg-contain bg-[url("/user.webp")] relative rounded-[30%_70%_24%76%/_65%_28%_72%_35%] welcomeUserImg`}
     >
-      <div class="absolute bottom-4 left-0 -translate-x-1/2 top-auto">
-        <div class="bubble shadow-[4px_4px_8px_1px_#0000003d]">
-          <IconTypescript height="28" />
+      <div class='absolute bottom-4 left-0 -translate-x-1/2 top-auto'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
+          <IconTypescript height='28' />
         </div>
       </div>
 
-      <div class="absolute top-[-1.8rem] left-1/2 -translate-x-1/2">
-        <div class="bubble shadow-[5px_8px_12px_1px_#0000003d]">
-          <IconReact height="28" />
+      <div class='absolute top-[-1.2rem] left-1/4 -translate-x-1/2'>
+        <div class='bubble shadow-[5px_8px_12px_1px_#0000003d]'>
+          <IconReact height='28' />
         </div>
       </div>
 
-      <div class="absolute top-auto left-auto bottom-4 right-[-.5rem]">
-        <div class="bubble shadow-[5px_8px_12px_1px_#0000003d]">
-          <IconTailwind height="30" />
+      <div class='absolute top-auto left-auto bottom-4 right-[-.5rem]'>
+        <div class='bubble shadow-[5px_8px_12px_1px_#0000003d]'>
+          <IconTailwind height='30' />
+        </div>
+      </div>
+
+      <div class='absolute bottom-auto left-auto top-4 right-[-.5rem]'>
+        <div class='bubble shadow-[5px_8px_12px_1px_#0000003d]'>
+          <IconCSS height='26' } />
         </div>
       </div>
     </div>
 
-    <div class="h-[60%] w-[95%] mt-2 text-center">
-      <h1 class="text-[2.7rem] tracking-[-1.3px]">
-        I<span class="text-p500 dark:text-p100">'</span>m <span
-          class="text-p500 dark:text-p100">Angel</span
+    <div class='h-[60%] w-[95%] mt-2 text-center'>
+      <h1 class='text-[2.7rem] tracking-[-1.3px]'>
+        I<span class='text-p500 dark:text-p100'>'</span>m <span
+          class='text-p500 dark:text-p100'>Angel</span
         >.
       </h1>
-      <p class="mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7]">
-        <span class="animated-text"> Software Engineer</span>
+      <p class='mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7]'>
+        <span class='animated-text'> Software Engineer</span>
         <span
-          class="font-mono text-base text-gray-400 dark:text-gray-500 mx-1.5"
+          class='font-mono text-base text-gray-400 dark:text-gray-500 mx-1.5'
           >&&</span
         > Frontend developer, that loves to build gorgeous <span
-          class="text-p500 dark:text-p100">software</span
+          class='text-p500 dark:text-p100'>software</span
         >
-        experiences<span class="text-p500 dark:text-p100">;</span>
+        experiences<span class='text-p500 dark:text-p100'>;</span>
       </p>
     </div>
   </article>
