--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -11,7 +11,7 @@ const wrIcon =
   'absolute top-3 right-3 h-12 w-12 rounded-3xl flex items-center justify-center';
 const emphasis = 'text-green-500 dark:text-green-200';
 const txtTitle = 'text-[#aeaeae] font-medium text-sm dark:text-[#6a6a6a]';
-const txtDesc = 'text-lg font-semibold mt-4';
+const txtDesc = 'text-lg font-semibold mt-4 dark:text-white';
 const txtFooter = 'text-[#aeaeae] text-sm dark:text-gray-500 mt-1';
 const gradientCard =
   'absolute left-1/2 top-0 w-[70%] h-[1px] select-none pointer-events-none -translate-x-1/2 translate-y-1/2 self-center bg-gradient-to-r from-transparent via-gray-200 dark:via-green-900 to-transparent';
@@ -21,15 +21,15 @@ const gradientCard =
   id='experience'
   class='mt-[16.3rem] grid place-items-center gap-y-[1rem] px-[1rem]'
 >
-  <h1 class='tracking-[-1px] text-5xl text-center'>
-    Education <span class='text-p500 dark:text-p100'> & </span>Experience.
+  <h1 class='tracking-[-1px] text-5xl text-center text-black dark:text-white'>
+    Education <span class='text-blue-500 dark:text-blue-200'>
+      &
+    </span>Experience.
   </h1>
-  <p class='text-center text-gray-500 leading-7'>
+  <p class='text-center text-gray-400 leading-7'>
     Where study and experience are <span class='text-black dark:text-white'
       >enhanced</span
-    >. The places where the <span class='text-black dark:text-white'
-      >mind
-    </span> is <span class='underline'>formed</span>.
+    >. The places where the mind is formed.
   </p>
   <main
     class='h-fit w-full md:w-[90%] mt-8 grid gap-12 items-center justify-items-center grid-cols-[repeat(auto-fit,minmax(20rem,1fr))]'
@@ -65,7 +65,7 @@ const gradientCard =
       <p class={txtTitle}>Current job</p>
       <h3 class={txtDesc}>BAACC Systems</h3>
       <p class={txtFooter}>
-        <span class={emphasis}>1</span> year and 10 months as Software Engineer.
+        <span class={emphasis}>2</span> years as Software Engineer.
       </p>
     </article>
 
