--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -38,7 +38,7 @@ import {
 </script>
 
 <main
-  class='h-screen flex justify-center items-center bg-[radial-gradient(#00000010_3%,#fff_0)] bg-[length:4rem_4rem] dark:bg-[radial-gradient(#ffffff1a_3%,transparent_0)]'
+  class='min-h-[100dvh] h-[100vh] w-full flex justify-center items-center bg-[radial-gradient(#00000010_3%,#fff_0)] bg-[length:4rem_4rem] dark:bg-[radial-gradient(#292929de_3%,#121212_0)]'
 >
   <article class='w-[35rem] flex flex-col gap-2 justify-center items-center'>
     <div
@@ -51,39 +51,40 @@ import {
       </div>
 
       <div class='absolute top-[-1.2rem] left-1/4 -translate-x-1/2'>
-        <div class='bubble shadow-[5px_8px_12px_1px_#0000003d]'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
           <IconReact height='28' />
         </div>
       </div>
 
       <div class='absolute top-auto left-auto bottom-4 right-[-.5rem]'>
-        <div class='bubble shadow-[5px_8px_12px_1px_#0000003d]'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
           <IconTailwind height='30' />
         </div>
       </div>
 
       <div class='absolute bottom-auto left-auto top-4 right-[-.5rem]'>
-        <div class='bubble shadow-[5px_8px_12px_1px_#0000003d]'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
           <IconCSS height='26' } />
         </div>
       </div>
     </div>
 
     <div class='h-[60%] w-[95%] mt-2 text-center'>
-      <h1 class='text-[2.7rem] tracking-[-1.3px]'>
-        I<span class='text-p500 dark:text-p100'>'</span>m <span
-          class='text-p500 dark:text-p100'>Angel</span
+      <h1 class='text-[2.7rem] tracking-[-1.3px] text-black dark:text-white'>
+        I<span class='text-blue-500 dark:text-blue-200'>'</span>m <span
+          class='text-blue-500 dark:text-blue-200'>Angel</span
         >.
       </h1>
-      <p class='mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7]'>
+      <p
+        class='mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7] text-black dark:text-gray-300'
+      >
         <span class='animated-text'> Software Engineer</span>
-        <span
-          class='font-mono text-base text-gray-400 dark:text-gray-500 mx-1.5'
+        <span class='font-mono text-base text-gray-400 dark:text-white mx-1.5'
           >&&</span
-        > Frontend developer, that loves to build gorgeous <span
-          class='text-p500 dark:text-p100'>software</span
+        > Frontend developer, that loves to build gorgeous & useful <span
+          class='text-blue-400 dark:text-blue-300'>software</span
         >
-        experiences<span class='text-p500 dark:text-p100'>;</span>
+        experiences<span class='text-blue-400 dark:text-blue-200'>;</span>
       </p>
     </div>
   </article>
