--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,6 +1,7 @@
 .wrapperSlider {
   width: 100%;
-  padding: 2rem;
+  padding: 0 2rem;
+  padding-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,6 +79,7 @@
   }
 
   .wrapperSlider {
+    position: relative;
     gap: 0 1.3rem;
     padding-inline: 3rem;
     justify-content: flex-start;
