--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,8 @@
 import '../App.css';
 import Experience from '../components/Experience.astro';
 import Footer from '../components/Footer.tsx';
-import Navbar from '../components/Navbar.astro';
+import Navbar from '../components/Navbar';
 import Projects from '../components/Projects.astro';
-import Topbar from '../components/Topbar.astro';
 import Welcome from '../components/Welcome.astro';
 ---
 
@@ -18,7 +17,7 @@ import Welcome from '../components/Welcome.astro';
       name='description'
       content='My portfolio. Who I am, where I studied, some of my skills and projects that I had been developed.'
     />
-    <meta name='viewport' content='width=device-width' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta name='generator' content={Astro.generator} />
 
     <title>Valencia Arcega &mdash; Portfolio</title>
@@ -28,9 +27,6 @@ import Welcome from '../components/Welcome.astro';
     <Projects />
     <Experience />
     <Footer />
-    <Navbar />
-    <Topbar />
-
-    <script src='../utils/appearance.ts'></script>
+    <Navbar client:load />
   </body>
 </html>
