01 - Welcome section has been completely redesign adding a new canvas particles effect on user-mouse-event. Also some small adjustments at white-space sizing for projects.

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -20,7 +20,7 @@ const sideMaskRight =
   'absolute top-0 left-auto right-0 h-full w-[22%] sm:w-[30%] z-40 bg-[linear-gradient(to_left,_#fff_4%,_transparent)] dark:bg-[linear-gradient(to_left,_#121212_4%,_transparent)]';
 ---
 
-<section class='pt-44 bg-a0 dark:bg-a950' id='projects'>
+<section class='pt-72 bg-a0 dark:bg-a950' id='projects'>
   <section class='w-full flex flex-col' style='container-type: inline-size;'>
     <header class='self-center w-[68%] flex flex-row relative justify-center'>
       <div
@@ -29,7 +29,7 @@ const sideMaskRight =
         <PiRocketDuotone className='text-5xl text-gray-300' />
       </div>
       <div
-        class='-ml-4 -mt-10 scale-125 z-50 w-20 max-h-24 rounded-xl grid place-content-center border-[1px] border-transparent dark:border-solid dark:border-a930 bg-a0 shadow-2xl dark:bg-[linear-gradient(0deg,_#191919,_#272727)] overflow-hidden'
+        class='-ml-4 -mt-10 scale-125 z-50 w-20 max-h-24 rounded-xl grid place-content-center bg-a0 shadow-2xl dark:bg-gradient-to-t dark:from-[#191919] dark:to-[#272727] overflow-hidden'
       >
         <PiAppStoreLogoDuotone
           className='text-6xl text-blue-400 dark:text-blue-500'
