--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -50,6 +50,23 @@ const sideMaskRight =
     <article
       class='mt-16 pt-10 relative grid gap-x-[1rem] gap-y-[2.2rem] grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] w-full items-center justify-items-center bg-gradient-to-t from-[#fff] to-[#fff] dark:bg-gradient-to-t dark:from-[#101010] dark:to-[#151515]'
     >
+      <main class='py-10'>
+        <article
+          class='w-[23rem] rounded-xl shadow-md shadow-black/10 dark:shadow-none p-4 bg-white'
+        >
+          <img
+            src='./logos/flego.png'
+            class='w-10'
+            alt='Flego application logo'
+          />
+          <h2
+            class='text-xl text-transparent bg-clip-text font-semibold tracking-tight bg-gradient-to-b from-a500 to-black'
+          >
+            Flego
+          </h2>
+        </article>
+      </main>
+
       <header
         class='absolute left-1/2 top-0 w-[80%] h-[1px] select-none pointer-events-none -translate-x-1/2 bg-gradient-to-r from-transparent via-[#cdccccab] to-transparent dark:bg-gradient-to-r dark:from-transparent dark:via-[#c6c6c6ab] dark:to-transparent'
       >
