01 - New projects sections based on the last production projects. Also some design adjustments at the welcome section to improve performance and let the particles be part of the background.

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -71,7 +71,7 @@ const gradientCard =
       <p class={txtTitle}>Current job</p>
       <h3 class={txtDesc}>BAACC Systems</h3>
       <p class={txtFooter}>
-        <span class={emphasis}>2</span> years as Software Engineer.
+        <span class={emphasis}>+2</span> years as Software Engineer.
       </p>
     </article>
 
