--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 @tailwind utilities;
 
@@ -87,4 +88,10 @@ html {
 
 .keyframe-entering-navbar {
 	animation: enteringMenuNavBar 0.5s ease;
+}
+
+.customTitle {
+	font-family: "Righteous", sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
