--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -10,193 +10,36 @@ import {
 
 <script>
   window.addEventListener('DOMContentLoaded', function () {
-    const canvas: any = document.getElementById('canvas-particles');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+    const img: HTMLElement = document.querySelector('.welcomeUserImg');
+    const height = img.clientHeight;
+    const width = img.clientWidth;
 
-    let particles = [];
+    img.addEventListener('mousemove', function (e) {
+      const { layerX, layerY } = e;
+      const yRotation = ((layerX - width / 2) / width) * 46;
+      const xRotation = ((layerY - height / 2) / height) * 46;
+      const string = `
+        perspective(500px)
+        scale(1.1)
+        rotateX(${xRotation}deg)
+        rotateY(${yRotation}deg)`;
 
-    let mouse = {
-      x: null,
-      y: null,
-      radius: (canvas.height / 80) * (canvas.width / 80),
-    };
-
-    window.addEventListener('mousemove', function (e) {
-      mouse.x = e.x;
-      mouse.y = e.y;
+      img.style.transform = string;
     });
 
-    window.addEventListener('mouseout', function (e) {
-      mouse.x = undefined;
-      mouse.y = undefined;
+    img.addEventListener('mouseout', function () {
+      img.style.transform = `
+    perspective(500px)
+    scale(1)
+    rotateX(0)
+    rotateY(0)`;
     });
-
-    window.addEventListener('resize', function () {
-      canvas.width = innerWidth;
-      canvas.height = innerHeight;
-      mouse.radius = (canvas.width / 80) * (canvas.height / 80);
-      init();
-    });
-
-    class Particle {
-      x: number;
-      y: number;
-      directionX: number;
-      directionY: number;
-      size: number;
-      colour: string;
-
-      constructor(
-        x: number,
-        y: number,
-        directionX: number,
-        directionY: number,
-        size: number,
-        colour: string
-      ) {
-        this.x = x;
-        this.y = y;
-        this.directionX = directionX;
-        this.directionY = directionY;
-        this.size = size;
-        this.colour = colour;
-      }
-
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.size, Math.PI * 2, false);
-        ctx.fillStyle = '#4dabf7';
-        ctx.fill();
-      }
-
-      update() {
-        if (this.x > canvas.width || this.x < 0) {
-          this.directionX = -this.directionX;
-        }
-
-        if (this.y > canvas.height || this.y < 0) {
-          this.directionY = -this.directionY;
-        }
-
-        let dx = mouse.x - this.x;
-        let dy = mouse.y - this.y;
-        let distance = Math.sqrt(dx * dx + dy * dy);
-
-        if (distance < mouse.radius + this.size) {
-          if (mouse.x < this.x && this.x < canvas.width - this.size * 10) {
-            this.x += 10;
-          }
-
-          if (mouse.x > this.x && this.x > this.size * 10) {
-            this.x -= 10;
-          }
-
-          if (mouse.y < this.y && this.y < canvas.height - this.size * 10) {
-            this.y += 10;
-          }
-
-          if (mouse.y > this.y && this.y > this.size * 10) {
-            this.y -= 10;
-          }
-        }
-
-        this.x += this.directionX;
-        this.y += this.directionY;
-
-        this.draw();
-      }
-    }
-
-    function init() {
-      particles = [];
-      let numberOfParticles = (canvas.height * canvas.width) / 8000;
-
-      for (let i = 0; i < numberOfParticles; i++) {
-        let size = Math.random() * 5 + 1;
-        let x = Math.random() * (innerWidth - size * 2 - size * 2) + size * 2;
-        let y = Math.random() * (innerHeight - size * 2 - size * 2) + size * 2;
-        let directionX = Math.random() * 5 - 2.5;
-        let directionY = Math.random() * 5 - 2.5;
-        let colour = '#8C5523';
-
-        particles.push(
-          new Particle(x, y, directionX, directionY, size, colour)
-        );
-      }
-    }
-
-    function connect() {
-      let opacity = 1;
-      let connectors = [];
-
-      for (let a = 0; a < particles.length; a++) {
-        for (let b = 0; b < particles.length; b++) {
-          let distance =
-            (particles[a].x - particles[b].x) *
-              (particles[a].x - particles[b].x) +
-            (particles[a].y - particles[b].y) *
-              (particles[a].y - particles[b].y);
-
-          if (distance < ((canvas.width / 6) * canvas.height) / 6) {
-            opacity = 1 - distance / 20000;
-            ctx.strokeStyle = 'rgba(173, 181, 189, ' + opacity + ')';
-            ctx.lineWidth = 1;
-            ctx.beginPath();
-            ctx.moveTo(particles[a].x, particles[a].y);
-            ctx.lineTo(particles[b].x, particles[b].y);
-            ctx.stroke();
-          }
-        }
-      }
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-      ctx.clearRect(0, 0, innerWidth, innerHeight);
-
-      for (let i = 0; i < particles.length; i++) {
-        particles[i].update();
-      }
-
-      connect();
-    }
-
-    init();
-    animate();
-
-    // const img: HTMLElement = document.querySelector('.welcomeUserImg');
-    // const height = img.clientHeight;
-    // const width = img.clientWidth;
-
-    // img.addEventListener('mousemove', function (e) {
-    //   const { layerX, layerY } = e;
-    //   const yRotation = ((layerX - width / 2) / width) * 46;
-    //   const xRotation = ((layerY - height / 2) / height) * 46;
-    //   const string = `
-    //     perspective(500px)
-    //     scale(1.1)
-    //     rotateX(${xRotation}deg)
-    //     rotateY(${yRotation}deg)`;
-
-    //   img.style.transform = string;
-    // });
-
-    // img.addEventListener('mouseout', function () {
-    //   img.style.transform = `
-    // perspective(500px)
-    // scale(1)
-    // rotateX(0)
-    // rotateY(0)`;
-    // });
   });
 </script>
 
 <section
   class='min-h-[100dvh] h-[100vh] w-full flex justify-center items-center bg-[radial-gradient(#00000010_3%,#fff_0)] bg-[length:5rem_5rem] dark:bg-[radial-gradient(#292929de_3%,#121212_0)]'
 >
-  <canvas class='hidden md:block opacity-70' id='canvas-particles'> </canvas>
   <main
     class='absolute top-0 left-0 flex items-center justify-center h-[100dvh] w-full'
   >
